--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "parcel-bundler": "^1.9.7",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.1"
   },
   "dependencies": {
