--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development parcel index.html",
     "build": "NODE_ENV=production parcel build index.html -d dist",
-    "start": "NODE_ENV=production serve dist",
+    "start": "NODE_ENV=production serve dist --single",
     "lint": "tslint --project ."
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "parcel-bundler": "^1.9.7",
+    "serve": "^9.6.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1"
