--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
+    "@types/redux-actions": "^2.3.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "parcel-bundler": "^1.9.7",
@@ -31,6 +32,7 @@
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1"
   }
 }
