--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-actions": "^2.3.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react-app": "^3.1.2",
     "parcel-bundler": "^1.9.7",
+    "parcel-plugin-sw-precache": "^1.0.1",
     "serve": "^9.6.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
