--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "NODE_ENV=development parcel public/index.html",
     "start": "NODE_ENV=production serve dist --single",
     "build": "NODE_ENV=production parcel build public/index.html",
+    "test": "jest",
     "lint": "tslint --project ."
   },
   "alias": {
@@ -17,15 +18,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "@types/parcel-env": "0.0.0",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
+    "jest": "^23.5.0",
     "parcel-bundler": "^1.9.7",
     "parcel-plugin-sw-precache": "^1.0.1",
     "serve": "^9.6.0",
+    "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1"
