--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Rahman Fadhil <rhmnfadhil@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/enzyme": "^3.1.13",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.1",
     "@types/parcel-env": "0.0.0",
     "@types/react": "^16.4.11",
@@ -21,7 +23,11 @@
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^23.5.0",
+    "jest-enzyme": "^6.0.3",
     "parcel-bundler": "^1.9.7",
     "parcel-plugin-sw-precache": "^1.0.1",
     "serve": "^9.6.0",
