--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production serve dist --single",
     "build": "NODE_ENV=production parcel build public/index.html",
     "test": "jest",
-    "lint": "tslint --project ."
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "Rahman Fadhil <rhmnfadhil@gmail.com>",
