--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-form": "^7.4.5",
     "@types/redux-logger": "^3.0.6",
+    "autoprefixer": "^9.1.3",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
@@ -59,6 +60,7 @@
     "jest-enzyme": "^6.0.3",
     "parcel-bundler": "^1.9.7",
     "parcel-plugin-sw-precache": "^1.0.1",
+    "postcss-modules": "^1.3.2",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "serve": "^10.0.0",
@@ -75,6 +77,7 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tailwindcss": "^0.6.5"
   }
 }
