--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "NODE_ENV=production parcel build public/index.html",
     "test": "jest",
     "test:watch": "jest --watch",
+    "clean": "rimraf ./dist ./.cache",
     "precommit": "pretty-quick"
   },
   "jest": {
@@ -63,6 +64,7 @@
     "postcss-modules": "^1.3.2",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
+    "rimraf": "^2.6.2",
     "serve": "^10.0.0",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
