--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-form": "^7.4.5",
     "@types/redux-logger": "^3.0.6",
+    "@types/validator": "^9.4.1",
     "autoprefixer": "^9.1.3",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
@@ -80,6 +81,7 @@
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^0.6.5"
+    "tailwindcss": "^0.6.5",
+    "validator": "^10.7.1"
   }
 }
